<resources>
    <string name="app_name">Jewelapp</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_search">Search</string>
    <string name="action_plus">add</string>
    <string name="action_chat">Chat</string>
    <string name="action_contacts">Contact Us</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help?</string>
    <string name="title_activity_splash_">Splash_Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_">Login </string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_post__new__demand">Post New Demand</string>

    <string-array name="size">
        <item>Size</item>
        <item>4.5</item>
        <item>5</item>
        <item>6</item>
        <item>other</item>
    </string-array>

    <string-array name="Color">
        <item>Color</item>
        <item>Red</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>other</item>
    </string-array>
    <string-array name="Clarity">
        <item>Clarity</item>
        <item>Clean</item>
        <item>high</item>
        <item>other</item>

    </string-array>

    <string-array name="Shade">
        <item>Shade</item>
        <item>deep</item>
        <item>medium</item>
        <item>light</item>
        <item>other</item>
    </string-array>

    <string-array name="Transparency">
        <item>Transparency</item>
        <item>transparent</item>
        <item>translucent</item>
        <item>opaque</item>
        <item>other</item>

    </string-array>
    <string-array name="Shape">
        <item>Shape</item>
        <item>Round</item>
        <item>square</item>
        <item>oval</item>
        <item>Heart</item>
        <item>other</item>
    </string-array>
    <string-array name="Type">
        <item>Type</item>
        <item>Ring</item>
        <item>Earring</item>
        <item>Tops</item>
        <item>Pendent</item>
        <item>Bracelet</item>
    </string-array>

    <string-array name="Cut">
        <item>cut</item>
        <item>normal</item>
        <item>fancey</item>
        <item>other</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot">Forgot Password</string>


</resources>
