<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_search"/>

    <item
        android:id="@+id/action_chat"
        android:title="@string/action_chat"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_plush"/>
    <item
        android:id="@+id/action_contacts"
        android:title="@string/action_contacts"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_plush"/>
    <item
        android:id="@+id/action_aboutus"
        android:title="@string/action_aboutus"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_plush"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_plush"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_plush"/>
</menu>
